# rust-imap

./: Cargo.toml  README.md
src/: client.rs  imaperror.rs  lib.rs
