[package]

name = "imap"
version = "0.0.3"
authors = ["Matt McCoy <mattnenterprise@yahoo.com>"]
repository = "https://github.com/mattnenterprise/rust-imap"
description = "IMAP client for Rust"
readme = "README.md"
license = "MIT"

[dependencies]
openssl = "0.6.7"
regex = "0.1.41"

[[bin]]
name = "example"
path = "example.rs"
