[package]

name = "imap"
version = "0.0.3"
authors = ["insanitybit <insanitybit@gmail.com>"]
repository = "https://github.com/mattnenterprise/rust-imap"
description = "IMAP client for Rust"
readme = "README.md"
license = "MIT"

[dependencies]
openssl = "0.7.*"
regex = "0.1.*"
rand = "0.3.*"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
